ARM/Networking/Site4/af_vnet_azuredeploy4_preProdB.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "commentLocation": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters for the deployment template filter on VNET302"
    },
    "commentVNET": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters from VNET tab, filter on VNET302"
    },
    "commentSubnet": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters from subnet tab, filter on VNET302"
    },
    "commentConnections": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters from Connection tab, filter on VNET302"
    },
    "commentGateway": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters from Gateway tab, filter on VNET302"
    },

    "baseUrl": {
      "defaultValue": "https://github.com/willstg/AzureFoundation/tree/master/arm/vnet/site1",
      "type": "string",
      "metadata": {
        "artifactsBaseUrl": "",
        "description": "URL to acquire other templates"
      }
    },
    /*Using the metadata template on the VNET Tab, filter to VNET402 and select
          the columns with Template and grouped by color*/
    "locationName": {
      "type": "string",
      "defaultValue": "usgovarizona"
    },
    "resourceGroupName": {
      "type": "string",
      "defaultValue": "rg_vnet_preprod_az"
    },
    "vnetName": {
      "type": "string",
      "defaultValue": "vnet_preprod_az",
      "metadata": { "description": "AzureFoundation VNET Name for virtual data center subscription in a specific data center." }
    },
    "vnetAddressPrefix": {
      "type": "string",
      "defaultValue": "10.128.224.0/20",
      "metadata": { "description": "AzureFoundation VNET Address Prefix, the range of addresses for a specific data center." }
    },
    "dnsServers": {
      "type": "array",
      "defaultValue": [],
      "metadata": { "description": "AzureFoundation Domain Controller DNS server" }
    },

    /*Using the metadata template on the Subnet Tab, filter to VNET402 and select
          the columns with Template and grouped by color*/
    "subnet310Prefix": {
      "type": "string",
      "defaultValue": "10.128.224.0/25",
      "metadata": { "description": "HTTP and HTTPS services" }
    },
    "subnet310Name": {
      "type": "string",
      "defaultValue": "310_Web_Test_slgmag_AZ",
      "metadata": { "description": "HTTP and HTTPS services" }
    },
    "subnet310NSG": {
      "type": "string",
      "defaultValue": "310_NSG_Web",
      "metadata": { "description": "NSG: HTTP and HTTPS services" }
    },
    "subnet315Prefix": {
      "type": "string",
      "defaultValue": "10.128.224.128/25",
      "metadata": { "description": "Loadbalanced HTTP and HTTPS Services" }
    },
    "subnet315Name": {
      "type": "string",
      "defaultValue": "315_LB_Web_Test_slgmag_AZ",
      "metadata": { "description": "Loadbalanced HTTP and HTTPS Services" }
    },
    "subnet315NSG": {
      "type": "string",
      "defaultValue": "315_NSG_LB_Web",
      "metadata": { "description": "NSG: Loadbalanced HTTP and HTTPS Services" }
    },
    "subnet320Prefix": {
      "type": "string",
      "defaultValue": "10.128.225.0/25",
      "metadata": { "description": "Web Services, OEM applications" }
    },
    "subnet320Name": {
      "type": "string",
      "defaultValue": "320_App_Test_slgmag_AZ",
      "metadata": { "description": "Web Services, OEM applications" }
    },
    "subnet320NSG": {
      "type": "string",
      "defaultValue": "320_NSG_App",
      "metadata": { "description": "NSG: Web Services, OEM applications" }
    },
    "subnet325Prefix": {
      "type": "string",
      "defaultValue": "10.128.225.128/25",
      "metadata": { "description": "Loadbalaned Web Services, OEM applications" }
    },
    "subnet325Name": {
      "type": "string",
      "defaultValue": "325_LB_App_Test_slgmag_AZ",
      "metadata": { "description": "Loadbalaned Web Services, OEM applications" }
    },
    "subnet325NSG": {
      "type": "string",
      "defaultValue": "325_NSG_LB_App",
      "metadata": { "description": "NSG: Loadbalaned Web Services, OEM applications" }
    },
    "subnet330Prefix": {
      "type": "string",
      "defaultValue": "10.128.226.0/25",
      "metadata": { "description": "Data for Applications" }
    },
    "subnet330Name": {
      "type": "string",
      "defaultValue": "330_DB_Test_slgmag_AZ",
      "metadata": { "description": "Data for Applications" }
    },
    "subnet330NSG": {
      "type": "string",
      "defaultValue": "330_NSG_DB",
      "metadata": { "description": "NSG: Data for Applications" }
    },
    "subnet335Prefix": {
      "type": "string",
      "defaultValue": "10.128.226.128/25",
      "metadata": { "description": "Loadbalanced Databases" }
    },
    "subnet335Name": {
      "type": "string",
      "defaultValue": "335_LB_DB_Test_slgmag_AZ",
      "metadata": { "description": "Loadbalanced Databases" }
    },
    "subnet335NSG": {
      "type": "string",
      "defaultValue": "335_NSG_LB_DB",
      "metadata": { "description": "NSG: Loadbalanced Databases" }
    },
    "subnet350Prefix": {
      "type": "string",
      "defaultValue": "10.128.227.0/25",
      "metadata": { "description": "Internet EndPoint Machines" }
    },
    "subnet350Name": {
      "type": "string",
      "defaultValue": "350_DMZ_Test_slgmag_AZ",
      "metadata": { "description": "Internet EndPoint Machines" }
    },
    "subnet350NSG": {
      "type": "string",
      "defaultValue": "350_NSG_DMZ",
      "metadata": { "description": "NSG: Internet EndPoint Machines" }
    },
    "subnet355Prefix": {
      "type": "string",
      "defaultValue": "10.128.227.128/25",
      "metadata": { "description": "Loadbalaned Internet Endpoint systems" }
    },
    "subnet355Name": {
      "type": "string",
      "defaultValue": "355_LB_DMZ_Test_slgmag_AZ",
      "metadata": { "description": "Loadbalaned Internet Endpoint systems" }
    },
    "subnet355NSG": {
      "type": "string",
      "defaultValue": "355_NSG_LB_DMZ",
      "metadata": { "description": "NSG: Loadbalaned Internet Endpoint systems" }
    },
    "subnet360Prefix": {
      "type": "string",
      "defaultValue": "10.128.228.0/25",
      "metadata": { "description": "Tier 0 - Direct Control of enterprise identities in the environment. Tier 0 includes accounts, groups, and other assets that have direct or indirect administrative control of the Active Directory forest, domains, or domain controllers, and all the assets in it. The security sensitivity of all Tier 0 assets is equivalent as they are all effectively in control of each other" }
    },
    "subnet360Name": {
      "type": "string",
      "defaultValue": "360_User_Tier0_Test_slgmag_AZ",
      "metadata": { "description": "Tier 0 - Direct Control of enterprise identities in the environment. Tier 0 includes accounts, groups, and other assets that have direct or indirect administrative control of the Active Directory forest, domains, or domain controllers, and all the assets in it. The security sensitivity of all Tier 0 assets is equivalent as they are all effectively in control of each other" }
    },
    "subnet360NSG": {
      "type": "string",
      "defaultValue": "360_NSG_User_Tier0",
      "metadata": { "description": "NSG: Tier 0 - Direct Control of enterprise identities in the environment. Tier 0 includes accounts, groups, and other assets that have direct or indirect administrative control of the Active Directory forest, domains, or domain controllers, and all the assets in it. The security sensitivity of all Tier 0 assets is equivalent as they are all effectively in control of each other" }
    },
    "subnet361Prefix": {
      "type": "string",
      "defaultValue": "10.128.228.128/25",
      "metadata": { "description": "Tier 1 administrator - manage enterprise servers, services, and applications" }
    },
    "subnet361Name": {
      "type": "string",
      "defaultValue": "361_User_Tier1_Test_slgmag_AZ",
      "metadata": { "description": "Tier 1 administrator - manage enterprise servers, services, and applications" }
    },
    "subnet361NSG": {
      "type": "string",
      "defaultValue": "361_NSG_User_Tier1",
      "metadata": { "description": "NSG: Tier 1 administrator - manage enterprise servers, services, and applications" }
    },
    "subnet362Prefix": {
      "type": "string",
      "defaultValue": "10.128.229.0/25",
      "metadata": { "description": "Tier 2 - Control of user workstations and devices. Tier 2 administrator accounts have administrative control of a significant amount of business value that is hosted on user workstations and devices" }
    },
    "subnet362Name": {
      "type": "string",
      "defaultValue": "362_User_Tier2_Test_slgmag_AZ",
      "metadata": { "description": "Tier 2 - Control of user workstations and devices. Tier 2 administrator accounts have administrative control of a significant amount of business value that is hosted on user workstations and devices" }
    },
    "subnet362NSG": {
      "type": "string",
      "defaultValue": "362_NSG_User_Tier2",
      "metadata": { "description": "NSG: Tier 2 - Control of user workstations and devices. Tier 2 administrator accounts have administrative control of a significant amount of business value that is hosted on user workstations and devices" }
    },
    "subnet410Prefix": {
      "type": "string",
      "defaultValue": "10.128.232.0/25",
      "metadata": { "description": "HTTP and HTTPS services" }
    },
    "subnet410Name": {
      "type": "string",
      "defaultValue": "410_Web_Dev_slgmag_AZ",
      "metadata": { "description": "HTTP and HTTPS services" }
    },
    "subnet410NSG": {
      "type": "string",
      "defaultValue": "410_NSG_Web",
      "metadata": { "description": "NSG: HTTP and HTTPS services" }
    },
    "subnet415Prefix": {
      "type": "string",
      "defaultValue": "10.128.232.128/25",
      "metadata": { "description": "Loadbalanced HTTP and HTTPS Services" }
    },
    "subnet415Name": {
      "type": "string",
      "defaultValue": "415_LB_Web_Dev_slgmag_AZ",
      "metadata": { "description": "Loadbalanced HTTP and HTTPS Services" }
    },
    "subnet415NSG": {
      "type": "string",
      "defaultValue": "415_NSG_LB_Web",
      "metadata": { "description": "NSG: Loadbalanced HTTP and HTTPS Services" }
    },
    "subnet420Prefix": {
      "type": "string",
      "defaultValue": "10.128.233.0/25",
      "metadata": { "description": "Web Services, OEM applications" }
    },
    "subnet420Name": {
      "type": "string",
      "defaultValue": "420_App_Dev_slgmag_AZ",
      "metadata": { "description": "Web Services, OEM applications" }
    },
    "subnet420NSG": {
      "type": "string",
      "defaultValue": "420_NSG_App",
      "metadata": { "description": "NSG: Web Services, OEM applications" }
    },
    "subnet425Prefix": {
      "type": "string",
      "defaultValue": "10.128.233.128/25",
      "metadata": { "description": "Loadbalaned Web Services, OEM applications" }
    },
    "subnet425Name": {
      "type": "string",
      "defaultValue": "425_LB_App_Dev_slgmag_AZ",
      "metadata": { "description": "Loadbalaned Web Services, OEM applications" }
    },
    "subnet425NSG": {
      "type": "string",
      "defaultValue": "425_NSG_LB_App",
      "metadata": { "description": "NSG: Loadbalaned Web Services, OEM applications" }
    },
    "subnet430Prefix": {
      "type": "string",
      "defaultValue": "10.128.234.0/25",
      "metadata": { "description": "Data for Applications" }
    },
    "subnet430Name": {
      "type": "string",
      "defaultValue": "430_DB_Dev_slgmag_AZ",
      "metadata": { "description": "Data for Applications" }
    },
    "subnet430NSG": {
      "type": "string",
      "defaultValue": "430_NSG_DB",
      "metadata": { "description": "NSG: Data for Applications" }
    },
    "subnet435Prefix": {
      "type": "string",
      "defaultValue": "10.128.234.128/25",
      "metadata": { "description": "Loadbalanced Databases" }
    },
    "subnet435Name": {
      "type": "string",
      "defaultValue": "435_LB_DB_Dev_slgmag_AZ",
      "metadata": { "description": "Loadbalanced Databases" }
    },
    "subnet435NSG": {
      "type": "string",
      "defaultValue": "435_NSG_LB_DB",
      "metadata": { "description": "NSG: Loadbalanced Databases" }
    },
    "subnet450Prefix": {
      "type": "string",
      "defaultValue": "10.128.235.0/25",
      "metadata": { "description": "Internet EndPoint Machines" }
    },
    "subnet450Name": {
      "type": "string",
      "defaultValue": "450_DMZ_Dev_slgmag_AZ",
      "metadata": { "description": "Internet EndPoint Machines" }
    },
    "subnet450NSG": {
      "type": "string",
      "defaultValue": "450_NSG_DMZ",
      "metadata": { "description": "NSG: Internet EndPoint Machines" }
    },
    "subnet455Prefix": {
      "type": "string",
      "defaultValue": "10.128.235.128/25",
      "metadata": { "description": "Loadbalaned Internet Endpoint systems" }
    },
    "subnet455Name": {
      "type": "string",
      "defaultValue": "455_LB_DMZ_Dev_slgmag_AZ",
      "metadata": { "description": "Loadbalaned Internet Endpoint systems" }
    },
    "subnet455NSG": {
      "type": "string",
      "defaultValue": "455_NSG_LB_DMZ",
      "metadata": { "description": "NSG: Loadbalaned Internet Endpoint systems" }
    },
    "subnet460Prefix": {
      "type": "string",
      "defaultValue": "10.128.236.0/25",
      "metadata": { "description": "Tier 0 - Direct Control of enterprise identities in the environment. Tier 0 includes accounts, groups, and other assets that have direct or indirect administrative control of the Active Directory forest, domains, or domain controllers, and all the assets in it. The security sensitivity of all Tier 0 assets is equivalent as they are all effectively in control of each other" }
    },
    "subnet460Name": {
      "type": "string",
      "defaultValue": "460_User_Tier0_Dev_slgmag_AZ",
      "metadata": { "description": "Tier 0 - Direct Control of enterprise identities in the environment. Tier 0 includes accounts, groups, and other assets that have direct or indirect administrative control of the Active Directory forest, domains, or domain controllers, and all the assets in it. The security sensitivity of all Tier 0 assets is equivalent as they are all effectively in control of each other" }
    },
    "subnet460NSG": {
      "type": "string",
      "defaultValue": "460_NSG_User_Tier0",
      "metadata": { "description": "NSG: Tier 0 - Direct Control of enterprise identities in the environment. Tier 0 includes accounts, groups, and other assets that have direct or indirect administrative control of the Active Directory forest, domains, or domain controllers, and all the assets in it. The security sensitivity of all Tier 0 assets is equivalent as they are all effectively in control of each other" }
    },
    "subnet461Prefix": {
      "type": "string",
      "defaultValue": "10.128.236.128/25",
      "metadata": { "description": "Tier 1 administrator - manage enterprise servers, services, and applications" }
    },
    "subnet461Name": {
      "type": "string",
      "defaultValue": "461_User_Tier1_Dev_slgmag_AZ",
      "metadata": { "description": "Tier 1 administrator - manage enterprise servers, services, and applications" }
    },
    "subnet461NSG": {
      "type": "string",
      "defaultValue": "461_NSG_User_Tier1",
      "metadata": { "description": "NSG: Tier 1 administrator - manage enterprise servers, services, and applications" }
    },
    "subnet462Prefix": {
      "type": "string",
      "defaultValue": "10.128.237.0/25",
      "metadata": { "description": "Tier 2 - Control of user workstations and devices. Tier 2 administrator accounts have administrative control of a significant amount of business value that is hosted on user workstations and devices" }
    },
    "subnet462Name": {
      "type": "string",
      "defaultValue": "462_User_Tier2_Dev_slgmag_AZ",
      "metadata": { "description": "Tier 2 - Control of user workstations and devices. Tier 2 administrator accounts have administrative control of a significant amount of business value that is hosted on user workstations and devices" }
    },
    "subnet462NSG": {
      "type": "string",
      "defaultValue": "462_NSG_User_Tier2",
      "metadata": { "description": "NSG: Tier 2 - Control of user workstations and devices. Tier 2 administrator accounts have administrative control of a significant amount of business value that is hosted on user workstations and devices" }
    },
    "subnet499Prefix": {
      "type": "string",
      "defaultValue": "10.128.239.224/27",
      "metadata": { "description": "Gateway Services to Local Networks" }
    },
    "subnet499Name": {
      "type": "string",
      "defaultValue": "GatewaySubnet",
      "metadata": { "description": "Gateway Services to Local Networks" }
    },


    /*Using the metadata template on the Connection Tab, filter to VNET402 and select
          the columns with Template and grouped by color*/
    "ConnectionNamecnct402": {
      "type": "string",
      "defaultValue": "Peering_slgmag_AZ_PreProd_To_AZ_Services",
      "metadata": { "description": "Arbitrary name for the new connection between an Azure VNet and another network" }
    },
    "vnetNamecnct402": {
      "type": "string",
      "defaultValue": "vnet_preprod_az",
      "metadata": { "description": "Azure VNET of the current location" }
    },
    "connectionType1cnct402": {
      "type": "string",
      "defaultValue": "Peering",
      "metadata": { "description": "The type of connection. For connecting to ExpressRoute circuits, the connectionType must be of type ExpressRoute. Other types are IPsec and Vnet2Vnet." }
    },
    "allowVNETAccesscnct402": {
      "type": "bool",
      "defaultValue": true,
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "allowFwdAccesscnct402": {
      "type": "bool",
      "defaultValue": true,
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "allowGWAccesscnct402": {
      "type": "bool",
      "defaultValue": true,
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "useRemoteGatewaycnct402": {
      "type": "bool",
      "defaultValue": false,
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "peerVNETNamecnct402": {
      "type": "string",
      "defaultValue": "vnet_services_az",
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "rmtSubIDcnct402": {
      "type": "string",
      "defaultValue": "30457dd5-e56b-416b-9228-d48b37fe7caa",
      "metadata": { "description": "The subscription ID of the peer VNET." }
    },
    "rmtRGNamecnct402": {
      "type": "string",
      "defaultValue": "rg_vnet_services_az",
      "metadata": { "description": "The resource group for the remote subscription VNET." }
    },
    "rmtConnectionNamecnct402": {
      "type": "string",
      "defaultValue": "",
      "metadata": { "description": "The name of the remote connection." }
    },
    "rmtLocationcnct402": {
      "type": "string",
      "defaultValue": "usgovarizona",
      "metadata": { "description": "The name of the remote location." }
    },



  },
  "variables": {
    "apiVersion": "2015-06-15",
    "vnetID": "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]",
    "subnet799Ref": "[concat(variables('vnetID'),'/subnets/',parameters('subnet499Name'))]"
  },

  "resources": [
    /*Using the metadata template on the NSGRules Tab, filter to VNET402 and select
          the columns with Resources and grouped by color*/
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet310NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "310_NSG_Web_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet315NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "315_NSG_LB_Web_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet320NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "320_NSG_App_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet325NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "325_NSG_LB_App_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet330NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "330_NSG_DB_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet335NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "335_NSG_LB_DB_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet350NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "350_NSG_DMZ_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet355NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "355_NSG_LB_DMZ_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet360NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "360_NSG_User_Tier0_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "SSH.Inbound.Allow",
            "properties": {
              "description": "SSH.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP.Inbound.Allow",
            "properties": {
              "description": "RDP.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 105,
              "direction": "Inbound"
            }
          },
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet361NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "361_NSG_User_Tier1_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "SSH.Inbound.Allow",
            "properties": {
              "description": "SSH.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP.Inbound.Allow",
            "properties": {
              "description": "RDP.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 105,
              "direction": "Inbound"
            }
          },
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet362NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "362_NSG_User_Tier2_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "SSH.Inbound.Allow",
            "properties": {
              "description": "SSH.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP.Inbound.Allow",
            "properties": {
              "description": "RDP.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 105,
              "direction": "Inbound"
            }
          },
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet410NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "410_NSG_Web_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet415NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "415_NSG_LB_Web_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet420NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "420_NSG_App_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet425NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "425_NSG_LB_App_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet430NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "430_NSG_DB_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet435NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "435_NSG_LB_DB_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet450NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "450_NSG_DMZ_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet455NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "455_NSG_LB_DMZ_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet460NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "460_NSG_User_Tier0_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "SSH.Inbound.Allow",
            "properties": {
              "description": "SSH.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP.Inbound.Allow",
            "properties": {
              "description": "RDP.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 105,
              "direction": "Inbound"
            }
          },
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet461NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "461_NSG_User_Tier1_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "SSH.Inbound.Allow",
            "properties": {
              "description": "SSH.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP.Inbound.Allow",
            "properties": {
              "description": "RDP.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 105,
              "direction": "Inbound"
            }
          },
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet462NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "462_NSG_User_Tier2_AZ" },
      "properties": {
        "securityRules": [
          {
            "name": "SSH.Inbound.Allow",
            "properties": {
              "description": "SSH.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP.Inbound.Allow",
            "properties": {
              "description": "RDP.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 105,
              "direction": "Inbound"
            }
          },
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },


    /*Using the metadata template on the Subnet Tab, filter to VNET402 and select
          the columns with Resources and grouped by color*/

    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('vnetName')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "AzureFoundation VNet Definition" },
      "properties": {
        "addressSpace": { "addressPrefixes": [ "[parameters('vnetAddressPrefix')]" ] },
        "subnets": [
          {
            "name": "[parameters('subnet310name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet310prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet310NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet315name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet315prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet315NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet320name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet320prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet320NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet325name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet325prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet325NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet330name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet330prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet330NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet335name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet335prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet335NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet350name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet350prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet350NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet355name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet355prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet355NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet360name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet360prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet360NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet361name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet361prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet361NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet362name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet362prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet362NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet410name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet410prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet410NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet415name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet415prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet415NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet420name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet420prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet420NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet425name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet425prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet425NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet430name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet430prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet430NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet435name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet435prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet435NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet450name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet450prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet450NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet455name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet455prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet455NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet460name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet460prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet460NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet461name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet461prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet461NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet462name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet462prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet462NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet499name')]",
            "properties": { "addressPrefix": "[parameters('subnet499prefix')]" }
          }
        ],

        /*END Subnet Import*/

        "resources": [
          /*Using the metadata template on the Connections Tab, filter to VNET402 and select
          the columns with Resources and grouped by color*/
          {
            "apiVersion": "2016-06-01",
            "type": "virtualNetworkPeerings",
            "name": "[parameters('ConnectionNamecnct402')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [ "[concat('/subscriptions/', parameters('rmtSubIDcnct402'), '/resourceGroups/', parameters('rmtRGNamecnct402'),'/providers/Microsoft.Network/virtualNetworks/',parameters('peerVNETNamecnct402'))]", "[concat('Microsoft.Networks/virtualNetworks/',parameters('vnetNamecnct402'))]" ],
            "comments": "Make sure you put these resources within the Resources of a VNET, like a subnet",
            "properties": {
              "allowVirtualNetworkAccess": "[parameters('allowVNETAccesscnct402')]",
              "allowForwardedTraffic": "[parameters('allowFwdAccesscnct402')]",
              "allowGatewayTransit": "[parameters('allowGWAccesscnct402')]",
              "useRemoteGateways": "[parameters('allowVNETAccesscnct402')]",
              "remoteVirtualNetwork": { "id": "[concat('/subscriptions/', parameters('rmtSubIDcnct402'), '/resourceGroups/', parameters('rmtRGNamecnct402'),'/providers/Microsoft.Network/virtualNetworks/',parameters('peerVNETNamecnct402'))]" }
            }
          }
        ],
        "dhcpOptions": { "dnsServers": [ "10.128.59.36" ] },
        "dependsOn": [
          /*Using the metadata template on the Subnet Tab, filter to VNET402 and select
          the columns with DependsOn and grouped by color*/
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet310NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet315NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet320NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet325NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet330NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet335NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet350NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet355NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet360NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet361NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet362NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet410NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet415NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet420NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet425NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet430NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet435NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet450NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet455NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet460NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet461NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet462NSG'))]"

        ]
      }
    }
  ],





  "outputs": {
  }

}
